deployement/gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: epic-frontend-app
  labels:
    name: epic-frontend-app
    app: epic-frontend-app
